--- a/index.html
+++ b/index.html
@@ -74,35 +74,35 @@
     <section class="container">
     <div class="swiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('../images/Asia-City.jpg') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
+            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('./images/Asia-City_photo.jpg') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
                 <div class="hero-banner">
                         <h1>Four Asian Tigers</h1>
                         <p>The Four Asian Tigers（also known as the Four Asian Dragons or Four Little Dragons in ...</p>
                         <a href="#about" class="btn hero-btn">EXPLORE ASIA TRAVEL</a>
                 </div>
             </div>
-            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('../HongKong/Avenue_of_Stars_2019_v3.png') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
+            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('./HongKong/Avenue_of_Stars_2019_photo.png') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
                 <div class="hero-banner">
                         <h1>Hong Kong</h1>
                         <p>Best of it all, it's in Hong Kong</p>
                         <a href="./en/HongKong.html" class="btn hero-btn">HONG KONG TRAVEL</a>
                 </div>
             </div>
-            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('../TaiWan/TAIPEI_101_2020_v3.png') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
+            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('./TaiWan/TAIPEI_101_2020_photo.png') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
                 <div class="hero-banner">
                         <h1>Tai Pei</h1>
                         <p>Waves of Wonder</p>
                         <a href="./en/TaiPei.html" class="btn hero-btn">TAI PEI TRAVEL</a>
                 </div>
             </div>
-            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('../SouthKorea/N_Seoul_Tower_2005_v3.png') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
+            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('./SouthKorea/N_Seoul_Tower_2005_photo.png') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
                 <div class="hero-banner">
                         <h1>Seoul</h1>
                         <p>Seoul, My Soul</p>
                         <a href="./en/Seoul.html" class="btn hero-btn">SEOUL TRAVEL</a>
                 </div>
             </div>
-            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('../Singapore/Merlion_Park_2009_v3.png') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
+            <div class="swiper-slide" id="home" style="background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url('./Singapore/Merlion_Park_2009_photo.png') center/cover no-repeat; display: flex; height: 85vh; width: 98vw; margin-top: 4rem; color: var(--clr-white);">
                 <div class="hero-banner">
                         <h1>Singapore</h1>
                         <p>Passion Made Possible</p>
