--- a/en/HongKong.html
+++ b/en/HongKong.html
@@ -145,7 +145,7 @@
 
         <section class="section" id="infos" >
                     <div class="section-title">
-                        <h2><span>Four Asian Tigers</span> Info</h2>
+                        <h2 id="infos-h2"><span>Four Asian Tigers</span> Info</h2>
                     </div>
         <div class="section-center featured-center">
 
