--- a/en/Avenue_of_Stars_History.html
+++ b/en/Avenue_of_Stars_History.html
@@ -89,14 +89,14 @@
     <div class="container">
         <div class="swiper-container-wrapper swiper-container-wrapper--timeline">
             <!-- Timeline -->
-            <ul class="swiper-pagination-custom">
+            <ul class="swiper-pagination-custom" id="timeline">
                 <li class='swiper-pagination-switch first active'><span class='switch-title'>1982</span></li>
                 <li class='swiper-pagination-switch'><span class='switch-title'>2004</span></li>
                 <li class='swiper-pagination-switch'><span class='switch-title'>2015</span></li>
                 <li class='swiper-pagination-switch last'><span class='switch-title'>2019</span></li>
             </ul>
             <!-- Progressbar -->
-            <div class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal"></div>
+            <div class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal" id="progressbar"></div>
             <!-- Swiper -->
             <div class="swiper swiper-container swiper-container--timeline">
                 <div class="swiper-wrapper">
