--- a/en/Merlion_Park_History.html
+++ b/en/Merlion_Park_History.html
@@ -89,7 +89,7 @@
     <div class="container">
         <div class="swiper-container-wrapper swiper-container-wrapper--timeline">
             <!-- Timeline -->
-            <ul class="swiper-pagination-custom">
+            <ul class="swiper-pagination-custom" id="timeline">
                 <li class='swiper-pagination-switch first active'><span class='switch-title'>1964</span></li>
                 <li class='swiper-pagination-switch'><span class='switch-title'>1971</span></li>
                 <li class='swiper-pagination-switch'><span class='switch-title'>1972</span></li>
@@ -98,7 +98,7 @@
                 <li class='swiper-pagination-switch last'><span class='switch-title'>2009</span></li>
             </ul>
             <!-- Progressbar -->
-            <div class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal"></div>
+            <div class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal" id="progressbar"></div>
             <!-- Swiper -->
             <div class="swiper swiper-container swiper-container--timeline">
                 <div class="swiper-wrapper">
