--- a/en/thank-you.html
+++ b/en/thank-you.html
@@ -29,7 +29,7 @@
             <ul class="nav-list" id="nav-list">
                 <li><a href="../index.html#home" class="nav-link">Home</a></li>
                 <li><a href="../index.html#about" class="nav-link">About </a></li>
-                <!-- <li><a href="#notices" class="nav-link">Notice</a></li> -->
+                <li><a href="../index.html#notices" class="nav-link">Notice</a></li>
                 <li><a href="../index.html#infos" class="nav-link">Info</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -78,7 +78,7 @@
             <ul class="mobile-nav-list" id="mobile-nav-list">
                 <li><a href="../index.html#home" class="mobile-nav-link">Home</a></li>
                 <li><a href="../index.html#about" class="mobile-nav-link">About</a></li>
-                <!-- <li><a href="#notice" class="mobile-nav-link">Notice</a></li> -->
+                <li><a href="../index.html#notice" class="mobile-nav-link">Notice</a></li>
                 <li><a href="../index.html#infos" class="mobile-nav-link">Info</a></li>
                 <li><a href="#contact" class="mobile-nav-link">Contact</a></li>
                 <!-- <li><a href="../tc/index.html" class="mobile-nav-link" title="繁體中文">繁體中文</a></li>
@@ -114,6 +114,7 @@
     <ul class="footer-links">
         <li><a href="../index.html#home" class="footer-link">Home</a></li>
         <li><a href="../index.html#about" class="footer-link">About</a></li>
+        <li><a href="../index.html#notices" class="footer-link">Notice</a></li>
         <li><a href="../index.html#info" class="footer-link">Info</a></li>
         <li><a href="#contact" class="footer-link">Contact</a></li>
     </ul>
