--- a/en/TaiPei.html
+++ b/en/TaiPei.html
@@ -75,7 +75,7 @@
         <div class="hero-banner">
             <h1>Tai Wan, Tai Pei, TAIPEI 101</h1>
             <video autoplay muted loop class="video" >
-                <source src="../video/TaiBei.mp4" type="video/mp4">
+                <source src="../video/TaiBei.mp4" type="video/mp4" preload="none">
             </video>
         </div>
     </section>
