--- a/en/Seoul.html
+++ b/en/Seoul.html
@@ -74,7 +74,7 @@
     <section class="hero" id="home">
         <div class="hero-banner">
             <h1>South Korea, Seoul, N Seoul Tower</h1>
-            <video autoplay muted loop class="video">
+            <video autoplay muted loop class="video" preload="none">
                 <source src="../video/Seoul.mp4" type="video/mp4">
             </video>
         </div>
