--- a/en/Singapore.html
+++ b/en/Singapore.html
@@ -75,7 +75,7 @@
     <section class="hero" id="home">
         <div class="hero-banner">
             <h1>Singapore, Singapore City, Merlion Park</h1>
-            <video autoplay muted loop class="video" preload="none">
+            <video muted class="video" preload="none">
                 <source src="../video/Singapore.mp4" type="video/mp4">
             </video>
         </div>
