--- a/en/TaiPei.html
+++ b/en/TaiPei.html
@@ -74,8 +74,8 @@
     <section class="hero" id="home">
         <div class="hero-banner">
             <h1>Tai Wan, Tai Pei, TAIPEI 101</h1>
-            <video autoplay muted loop class="video" >
-                <source src="../video/TaiBei.mp4" type="video/mp4" preload="none">
+            <video muted class="video" preload="none">
+                <source src="../video/TaiBei.mp4" type="video/mp4" >
             </video>
         </div>
     </section>
