--- a/en/HongKong.html
+++ b/en/HongKong.html
@@ -75,7 +75,7 @@
     <section class="hero" id="home">
         <div class="hero-banner">
             <h1>China, Hong Kong, Avenue of Stars</h1>
-            <video autoplay muted loop class="video" preload="none">
+            <video muted class="video" preload="none">
                 <source src="../video/HongKong.mp4" type="video/mp4">
             </video>
         </div>       
