--- a/en/Merlion_Park_Culture.html
+++ b/en/Merlion_Park_Culture.html
@@ -100,7 +100,7 @@
               <li><a href="./Singapore.html#notices" class="mobile-nav-link">Notice</a></li>
               
               <li class="mobile-dropdown">
-                <a href="#infos" class="mobile-nav-link">Info</a>
+                <a href="./Singapore.html#infos" class="mobile-nav-link">Info</a>
                 <div class="mobile-dropdown-toggle">
                   <i class="fa-solid fa-chevron-down"></i>
                 </div>
