--- a/en/N_Seoul_Tower_History.html
+++ b/en/N_Seoul_Tower_History.html
@@ -101,7 +101,7 @@
               <li><a href="./Seoul.html#notices" class="mobile-nav-link">Notice</a></li>
               
               <li class="mobile-dropdown">
-                <a href="#infos" class="mobile-nav-link">Info</a>
+                <a href="./Seoul.html#infos" class="mobile-nav-link">Info</a>
                 <div class="mobile-dropdown-toggle">
                   <i class="fa-solid fa-chevron-down"></i>
                 </div>
