--- a/en/TAIPEI_101_Culture.html
+++ b/en/TAIPEI_101_Culture.html
@@ -102,7 +102,7 @@
               <li><a href="./TaiPei.html#notices" class="mobile-nav-link">Notice</a></li>
               
               <li class="mobile-dropdown">
-                <a href="#infos" class="mobile-nav-link">Info</a>
+                <a href="./TaiPei.html#infos" class="mobile-nav-link">Info</a>
                 <div class="mobile-dropdown-toggle">
                   <i class="fa-solid fa-chevron-down"></i>
                 </div>
