--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <ul class="mobile-sub-submenu">
                       <li><a href="./en/TAIPEI_101_History.html" class="mobile-nav-link-v3">History</a></li>
                       <li><a href="./en/TAIPEI_101_Culture.html" class="mobile-nav-link-v3">Culture</a></li>
-                      <li><a href="./en/TAIPEI_101_Attraction_Info.htm" class="mobile-nav-link-v3">Attraction</a></li>
+                      <li><a href="./en/TAIPEI_101_Attraction_Info.html" class="mobile-nav-link-v3">Attraction</a></li>
                     </ul>
                   </li>
                   
